update info and markup

--- a/index.html
+++ b/index.html
@@ -9,60 +9,125 @@
 <body>
 
 <header>
+    <img src="me.jpg" alt="Evgenii Frolov" class="profile-photo">
     <h1>Evgenii Frolov</h1>
-    <p>Senior Software Engineer</p>
-    <p>Vilnius, Lithuania | Looking for a job in EU | Open to relocation</p>
-    <p>Contact: <a href="tel:+37066042210">+37066042210</a> | <a href="mailto:engfrolov@gmail.com">engfrolov@gmail.com</a> | <a href="https://www.linkedin.com/in/evgenii-frolov-a34994124" target="_blank">LinkedIn</a></p>
+    <p>Lead Software Engineer | React | Typescript</p>
+    <p>Based in Vilnius, Lithuania | Looking for a job in EU, UK | Open to relocating</p>
+    <p>Contact: <a href="tel:+37066042210">+37066042210</a> | <a
+            href="mailto:engfrolov@gmail.com">engfrolov@gmail.com</a> | <a
+            href="https://www.linkedin.com/in/evgenii-frolov-a34994124" target="_blank">LinkedIn</a></p>
 </header>
 
-<section>
-    <h2>Experience</h2>
-    <div class="job">
-        <h3>Senior Software Engineer</h3>
-        <p>EPAM Systems | 07/2022 - Present | Vilnius, Lithuania</p>
-        <ul>
-            <li>Managed multiple frontend teams, overseeing app development and feature releases.</li>
-            <li>Decomposed stories for developers, aiding task management and project clarity.</li>
-            <li>Played a key role in hiring, interviewing, and integrating new team members.</li>
-            <li>Assisted team with TypeScript tasks, fostering collaboration.</li>
-        </ul>
+<main class="container">
+    <div class="left">
+        <section class="summary">
+            <h2>Summary</h2>
+            <p>I'm Evgenii Frolov, a Lead Software Engineer specializing in frontend development, currently residing in Vilnius.</p>
+            <p>Worked across various sectors including banking, trading platforms, healthcare, social platforms, and legal area.</p>
+            <p>Apart from my technical abilities, I thoroughly enjoy mentoring and sharing knowledge. I've spoken at meetups, including FrontSpot Asia.</p>
+        </section>
+        <section class="list">
+            <h2>Languages</h2>
+            <ul>
+                <li>English: Professional working proficiency</li>
+                <li>Russian: Native proficiency</li>
+            </ul>
+        </section>
+        <section class="list">
+            <h2>Skills</h2>
+            <h3>Key Skills</h3>
+            <ul>
+                <li>TypeScript</li>
+                <li>React</li>
+                <li>Redux</li>
+                <li>HTML/CSS</li>
+                <li>JavaScript</li>
+                <li>Jest</li>
+                <li>GraphQL</li>
+            </ul>
+            <h3>Tools</h3>
+            <ul>
+                <li>NPM</li>
+                <li>Git</li>
+                <li>Yarn</li>
+                <li>Docker</li>
+                <li>Figma</li>
+                <li>AWS</li>
+            </ul>
+        </section>
     </div>
-
-    <div class="job">
-        <h3>Senior Frontend Developer</h3>
-        <p>EPAM Systems | 09/2020 - 07/2022 | Saint-Petersburg, Russia</p>
-        <ul>
-            <li>Developed Backend-for-frontend application architecture, enhancing system functionality.</li>
-            <li>Improved swagger type generator tool.</li>
-        </ul>
+    <div class="right">
+        <section>
+            <h2>Experience</h2>
+            <div class="job list">
+                <h3>Senior Software Engineer</h3>
+                <p>EPAM Systems | 07/2022 - Present | Vilnius, Lithuania</p>
+                <ul>
+                    <li>Managed multiple frontend teams, overseeing the development and release of new app versions and
+                        features.
+                    </li>
+                    <li>Decomposed stories for developers, aiding in task management and ensuring a clear understanding
+                        of
+                        project requirements.
+                    </li>
+                    <li>Played a key role in the hiring process, interviewing and integrating new team members into the
+                        team.
+                    </li>
+                    <li>Assisted other team members with typescript typing tasks, fostering a collaborative and
+                        supportive
+                        team environment.
+                    </li>
+                </ul>
+            </div>
+            <div class="job list">
+                <h3>Senior Software Engineer</h3>
+                <p>EPAM Systems | 09/2020 - 07/2022 | Saint-Petersburg, Russia</p>
+                <ul>
+                    <li>Developed a frontend application architecture.</li>
+                    <li>Developed a Backend-for-frontend application architecture, enhancing the functionality and
+                        efficiency of our systems.
+                    </li>
+                    <li>Improved the Swagger type generator tool, streamlining API type definitions and integration
+                        processes.
+                    </li>
+                </ul>
+            </div>
+            <div class="job list">
+                <h3>Middle Software Engineer</h3>
+                <p>CSSSR | 07/2019 - 09/2020 | Moscow, Russia</p>
+                <ul>
+                    <li>Identified and fixed memory leaks and implemented React best practices to reduce the number of
+                        rerenders, significantly improving performance.
+                    </li>
+                    <li>Created a cookbook for team developers and newcomers, providing a valuable resource for
+                        understanding our processes and systems.
+                    </li>
+                    <li>Improved code review practices, ensuring a more efficient and thorough review process.</li>
+                    <li>Developed a Backend-for-frontend application architecture, enhancing the functionality and
+                        efficiency of our systems.
+                    </li>
+                </ul>
+            </div>
+            <div class="job list">
+                <h3>Middle Software Engineer</h3>
+                <p>Accenture | 12/2016 - 06/2019 | Tver, Russia</p>
+                <ul>
+                    <li>Implemented features by creating components and integrating the frontend web client with backend
+                        APIs, enhancing the functionality of our application.
+                    </li>
+                    <li>Enhanced the process development by improving code review practices, creating a cookbook for
+                        team
+                        developers and newcomers, and implementing a simplified version of Git Flow.
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section>
+            <h2>Education</h2>
+            <p>Bachelor of Applied Mathematics and Computer Science<br>Tver State University | 09/2011 - 06/2015 | Tver,
+                Russia</p>
+        </section>
     </div>
-
-    <!-- Additional jobs can be added in the same format -->
-
-</section>
-
-<section>
-    <h2>Education</h2>
-    <p>Bachelor of Applied Mathematics and Computer Science<br>Tver State University | 06/2014 - 01/2016 | Tver, Russia</p>
-</section>
-
-<section>
-    <h2>Summary</h2>
-    <p>I'm Evgenii Frolov, a Senior Software Engineer specializing in frontend development. I’ve worked across sectors including banking, trading, healthcare, social platforms, and legal. I enjoy mentoring and sharing knowledge, and have spoken at meetups like FrontSpot Asia.</p>
-</section>
-
-<section>
-    <h2>Languages</h2>
-    <p>English (Proficient), Русский (Native)</p>
-</section>
-
-<section>
-    <h2>Skills</h2>
-    <h3>Key Skills</h3>
-    <p>TypeScript, React, Redux, HTML/CSS, JavaScript, Jest, GraphQL</p>
-    <h3>Tools</h3>
-    <p>NPM, Git, Yarn, Docker, Figma, AWS</p>
-</section>
-
+</main>
 </body>
 </html>
