--- a/index.html
+++ b/index.html
@@ -60,8 +60,12 @@
         <section>
             <h2>Experience</h2>
             <div class="job list">
+                <h3>Lead Software Engineer</h3>
+                <p>EPAM Systems | 10/2024 - Present | Vilnius, Lithuania</p>
+            </div>
+            <div class="job list">
                 <h3>Senior Software Engineer</h3>
-                <p>EPAM Systems | 07/2022 - Present | Vilnius, Lithuania</p>
+                <p>EPAM Systems | 07/2022 - 10/2024 | Vilnius, Lithuania</p>
                 <ul>
                     <li>Managed multiple frontend teams, overseeing the development and release of new app versions and
                         features.
