- Updated dates  - Added info about experience

--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
             <h2>Experience</h2>
             <div class="job list">
                 <h3>Lead Software Engineer</h3>
-                <p>EPAM Systems | 10/2024 - Present | Vilnius, Lithuania</p>
+                <p>EPAM Systems | Oct 2024 - Present | Vilnius, Lithuania</p>
             </div>
             <div class="job list">
                 <h3>Senior Software Engineer</h3>
-                <p>EPAM Systems | 07/2022 - 10/2024 | Vilnius, Lithuania</p>
+                <p>EPAM Systems | Jul 2022 - Oct 2024 | Vilnius, Lithuania</p>
                 <ul>
                     <li>Managed multiple frontend teams, overseeing the development and release of new app versions and
                         features.
@@ -85,7 +85,7 @@
             </div>
             <div class="job list">
                 <h3>Senior Software Engineer</h3>
-                <p>EPAM Systems | 09/2020 - 07/2022 | Saint-Petersburg, Russia</p>
+                <p>EPAM Systems | Sep 2020 - Jul 2022 | Saint-Petersburg, Russia</p>
                 <ul>
                     <li>Developed a frontend application architecture.</li>
                     <li>Developed a Backend-for-frontend application architecture, enhancing the functionality and
@@ -98,7 +98,7 @@
             </div>
             <div class="job list">
                 <h3>Middle Software Engineer</h3>
-                <p>CSSSR | 07/2019 - 09/2020 | Moscow, Russia</p>
+                <p>CSSSR | Jul 2019 - Sep 2020 | Moscow, Russia</p>
                 <ul>
                     <li>Identified and fixed memory leaks and implemented React best practices to reduce the number of
                         rerenders, significantly improving performance.
@@ -114,7 +114,7 @@
             </div>
             <div class="job list">
                 <h3>Middle Software Engineer</h3>
-                <p>Accenture | 12/2016 - 06/2019 | Tver, Russia</p>
+                <p>Accenture | Dec 2016 - Jun 2019 | Tver', Russia</p>
                 <ul>
                     <li>Implemented features by creating components and integrating the frontend web client with backend
                         APIs, enhancing the functionality of our application.
@@ -125,10 +125,19 @@
                     </li>
                 </ul>
             </div>
+            <div class="job list">
+                <h3>Junior Software Engineer</h3>
+                <p>Accenture | Dec 2016 - Jun 2019 | Tver', Russia</p>
+                <ul>
+                    <li>Implemented features by creating components and integrating the frontend web client with backend
+                        APIs using Java MVC framework.
+                    </li>
+                </ul>
+            </div>
         </section>
         <section>
             <h2>Education</h2>
-            <p>Bachelor of Applied Mathematics and Computer Science<br>Tver State University | 09/2011 - 06/2015 | Tver,
+            <p>Bachelor of Applied Mathematics and Computer Science<br>Tver' State University | Sep 2011 - Jul 2016 | Tver,
                 Russia</p>
         </section>
     </div>
