- added anchor links  - added skip to main content link

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+<a href="#main" class="skip-to-main-content-link">Skip to main content</a>
 <header>
     <img src="me.jpg" alt="Evgenii Frolov" class="profile-photo">
     <h1>Evgenii Frolov</h1>
@@ -17,24 +17,50 @@
             href="mailto:engfrolov@gmail.com">engfrolov@gmail.com</a> | <a
             href="https://www.linkedin.com/in/evgenii-frolov-a34994124" target="_blank">LinkedIn</a></p>
 </header>
-
-<main class="container">
+<main id="main" class="container">
     <div class="left">
         <section class="summary">
-            <h2>Summary</h2>
-            <p>I'm Evgenii Frolov, a Lead Software Engineer specializing in frontend development, currently residing in Vilnius.</p>
-            <p>Worked across various sectors including banking, trading platforms, healthcare, social platforms, and legal area.</p>
-            <p>Apart from my technical abilities, I thoroughly enjoy mentoring and sharing knowledge. I've spoken at meetups, including FrontSpot Asia.</p>
+            <h2 id="summary">
+                <a href="#summary" aria-label="Summary (permalink)" class="anchor">
+                    <svg aria-hidden="true" height="16" version="1.1" viewBox="0 0 16 16" width="16">
+                        <path fill-rule="evenodd"
+                              d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path>
+                    </svg></a>
+                Summary
+            </h2>
+            <p>I'm Evgenii Frolov, a Lead Software Engineer specializing in frontend development, currently residing in
+                Vilnius.
+            </p>
+            <p>Worked across various sectors including banking, trading platforms, healthcare, social platforms, and
+                legal area.
+            </p>
+            <p>Apart from my technical abilities, I thoroughly enjoy mentoring and sharing knowledge. I've spoken at
+                meetups, including FrontSpot Asia.
+            </p>
         </section>
         <section class="list">
-            <h2>Languages</h2>
+            <h2 id="languages">
+                <a href="#languages" aria-label="Languages (permalink)" class="anchor">
+                    <svg aria-hidden="true" height="16" version="1.1" viewBox="0 0 16 16" width="16">
+                        <path fill-rule="evenodd"
+                              d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path>
+                    </svg></a>
+                Languages
+            </h2>
             <ul>
                 <li>English: Professional working proficiency</li>
                 <li>Russian: Native proficiency</li>
             </ul>
         </section>
         <section class="list">
-            <h2>Skills</h2>
+            <h2 id="skills">
+                <a href="#skills" aria-label="Skills (permalink)" class="anchor">
+                    <svg aria-hidden="true" height="16" version="1.1" viewBox="0 0 16 16" width="16">
+                        <path fill-rule="evenodd"
+                              d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path>
+                    </svg></a>
+                Skills
+            </h2>
             <h3>Key Skills</h3>
             <ul>
                 <li>TypeScript</li>
@@ -58,7 +84,14 @@
     </div>
     <div class="right">
         <section>
-            <h2>Experience</h2>
+            <h2 id="experience">
+                <a href="#experience" aria-label="Experience (permalink)" class="anchor">
+                    <svg aria-hidden="true" height="16" version="1.1" viewBox="0 0 16 16" width="16">
+                        <path fill-rule="evenodd"
+                              d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path>
+                    </svg></a>
+                Experience
+            </h2>
             <div class="job list">
                 <h3>Lead Software Engineer</h3>
                 <p>EPAM Systems | Oct 2024 - Present | Vilnius, Lithuania</p>
@@ -136,9 +169,18 @@
             </div>
         </section>
         <section>
-            <h2>Education</h2>
-            <p>Bachelor of Applied Mathematics and Computer Science<br>Tver' State University | Sep 2011 - Jul 2016 | Tver,
-                Russia</p>
+            <h2 id="education">
+                <a href="#education" aria-label="Education (permalink)" class="anchor">
+                    <svg aria-hidden="true" height="16" version="1.1" viewBox="0 0 16 16" width="16">
+                        <path fill-rule="evenodd"
+                              d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path>
+                    </svg></a>
+                Education
+            </h2>
+            <p>Bachelor of Applied Mathematics and Computer Science<br>Tver' State University | Sep 2011 - Jul 2016 |
+                Tver,
+                Russia
+            </p>
         </section>
     </div>
 </main>
