added Danish phone number

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>Evgenii Frolov</h1>
     <p>Lead Software Engineer | React | Typescript</p>
     <p>Based in Vilnius, Lithuania | Looking for a job in EU, UK | Open to relocating</p>
-    <p>Contact: <a href="tel:+37066042210">+37066042210</a> | <a
+    <p>Contact: <a href="tel:+37066042210">+37066042210</a> | <a href="tel:+4552698190">+4552698190</a> | <a
             href="mailto:engfrolov@gmail.com">engfrolov@gmail.com</a> | <a
             href="https://www.linkedin.com/in/evgenii-frolov-a34994124" target="_blank">LinkedIn</a></p>
 </header>
